Fixed nav bar. Collapsible on smaller phones now working.

--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -1,6 +1,6 @@
 .project{
     color:#C2C1C3;
-    padding:100px;
+    /* padding:100px; */
 }
 
 .h6{
